fixed whitespace on favorites page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -77,6 +77,9 @@ html,body
   animation: spin infinite 2s linear;
   font-size: 3rem;
 }
+.likes {
+  height: 30rem;
+}
 
 @keyframes spin {
 from {
